deploy.k8s.repo/configk8s_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serviceName
  namespace: default
  labels:
    app: serviceName
spec:
  selector:
    app: label
  ports:
    - name: web-dotnet
      port: 80
      targetPort: 8080
  type: ClusterIP
